<resources>
    <!-- Login Screen -->
    <string name="app_name">College Manager</string>
    <string name="logo_desc">College Logo</string>
    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_forgot">Forgot Password</string>

    <!-- Home screen -->
    <string name="welcome_text">Institute of Engineering and Technology</string>

    <!-- Assignment Screen -->
    <string name="assign_text">Which assignments would your like to view?</string>
    <string name="pending_button">Pending Assignments</string>
    <string name="submit_button">Submitted Assignments</string>

    <!-- Pending Assignment Screen -->
    <string name="pendingLogoDescription">Pending Assignment Logo</string>
    <string name="welcome_pending">The following assignments are pending, long press on one of the assignments to upload it\'s solution.</string>

    <!-- Submitted Assignment Screen -->
    <string name="submittedLogoDescription">Submitted Assignment Logo</string>
    <string name="welcome_submitted">The following assignments have been submitted, press on one of the assignments to re-upload it\'s solution.</string>

    <!-- Student Profile Screen  -->
    <string name="student_img">Student Image</string>
    <string name="colon">:</string>

    <!-- Attendance Screen -->
    <string name="attendanceLogoDescription">Attendance Logo</string>
    <string name="attendanceText">Your attendance in all the subjects must be above 75%.</string>

    <!-- Notices Screen -->
    <string name="noticesLogoDescription">Notices Logo</string>
    <string name="noticesText">Please check these notice boards regularly.</string>
    <string name="noticeHint">Click on a notice to download it.</string>
</resources>
