<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp" >

    <ImageView
        android:id="@id/collegeLogo"
        android:layout_above="@id/usernameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_desc"/>
    <EditText
        android:id="@id/usernameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/edit_username"
        android:inputType="text"/>
    <EditText
        android:id="@id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password"
        android:layout_below="@id/usernameEdit"
        android:inputType="textPassword"/>
    <Button
        android:id="@id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEdit"
        android:text="@string/button_login"/>
    <Button
        android:id="@id/forgotButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_forgot"
        android:layout_below="@id/loginButton"/>
</RelativeLayout>